# ckanext-example-theming

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/example_theming/: plugin.py
ckanext/example_theming/assets/: script.js  webassets.yml
ckanext/example_theming/templates/benchmarks/: block_1k.html  direct_include.html  direct_include_1k.html  direct_include_legion.html  legion_macros.html  macro_direct_include.html  macro_direct_include_1k.html  macro_direct_include_legion.html  macro_include_with_context.html  macro_include_with_context_1k.html  macro_include_with_context_legion.html  macro_include_without_context.html  macro_include_without_context_1k.html  macro_include_without_context_legion.html  macro_inline.html  macro_inline_1k.html  macro_inline_legion.html  macro_snippet.html  macro_snippet_1k.html  macro_snippet_legion.html  macros.html  snippet.html  snippet_1k.html  snippet_legion.html
ckanext/example_theming/templates/benchmarks/legion/: 265.html
ckanext/example_theming/tests/: test_plugin.py  test_render.py
ckanext/example_theming/themes/bare/: page.html
ckanext/example_theming/themes/bare/development/: primer.html
ckanext/example_theming/themes/bare/macros/: ui.html
